--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,6 +3,12 @@ input::placeholder {
     color: red;
 }
 
+@media(max-width: 1400px) {
+    .justify-evenly-below-desktop {
+        justify-content: space-evenly;
+    }
+}
+
 /*Index Page*/
 #hero {
     height: calc(100vh);
@@ -18,4 +24,12 @@ input::placeholder {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+/*Catering Page*/
+#catering-order {
+    background-image: url('/images/coffee-toast.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
